--- a/styles/global.css
+++ b/styles/global.css
@@ -41,11 +41,94 @@ a {
 :root {
     --accent-bg-color: ;
 	--title-color: ;
-	--contrast-color: ;
-    --text-color: #1d1d1d;
+	--contrast-color: #deebff;
+    --text-color: #000000;
     --text-light-color: ;
     --text-secondary-color: ;
-    --primary-color: ;
+    --primary-color: #0065ff;
     --primary-color-dark: ;
     --container-width: 95%;
 }
+
+.container{
+	width: var(--container-width);
+	margin: 0 auto;
+}
+
+.mobile-nav {
+	display: flex;
+    padding: 4px;
+}
+.desktop-nav {
+	display: none;
+}
+
+.nav__menu {
+	display: flex;
+	align-items: center;
+    justify-content: space-between;
+}
+
+.trello-logo {
+	width: 120px;
+	padding: 4px 0;
+}
+
+.trello-logo img {
+	width: 100%;
+}
+
+.menu-button {
+	width: 40px;
+}
+
+.menu-button img {
+	width: 100%;
+}
+
+.menu__items {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.menu__items ul {
+	display: flex;
+	justify-content: space-between;
+}
+
+.menu__items ul li {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 4px;
+}
+
+.menu__items ul li img {
+	width: 10px;
+}
+
+.login {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.login-button p {
+	white-space: nowrap;
+	padding: 4px 12px;
+}
+
+/* 
+.advise {
+	width: 100%;
+	background-color: var(--contrast-color);
+}
+
+.advise__text {
+	display: flex;
+}
+
+.advise__text p {
+	text-align: center;
+} */
