--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -5,10 +5,40 @@
 
 /* Media query para dispositivos de escritorio (mayores a 1024px y hasta 1439px) */
 @media (min-width: 1024px) and (max-width: 1439px) {
-    
+    :root {
+        --container-width: 85%;
+    }
+
+    .mobile-nav {
+        display: none;
+    }
+
+    .desktop-nav {
+        display: flex;
+    }
+
+    .nav__menu {
+        justify-content: flex-start;
+        gap: 20px;
+    }
+
 }
 
 /* Media query para dispositivos de escritorio XXL (mayores a 1440px) */
 @media (min-width: 1440px) {
-	
+    :root {
+        --container-width: 75%;
+    }
+	.mobile-nav {
+        display: none;
+    }
+
+    .desktop-nav {
+        display: flex;
+    }
+
+    .nav__menu {
+        justify-content: flex-start;
+        gap: 20px;
+    }
 }
