--- a/styles/global.css
+++ b/styles/global.css
@@ -33,8 +33,8 @@ ul {
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
+	color: var(--primary-color-dark);
+	text-decoration: underline;
 }
 
 :root {
@@ -47,7 +47,7 @@ a {
 	--container-width: 90%;
 	--text-title-size: 29px;
 	--text-title-line-height: 42px;
-	--text-subtitle-size: 24px;
+	--text-subtitle-size: 19px;
 	--text-pbig-size: 20px;
 	--text-button-size: 18px;
 }
@@ -56,6 +56,8 @@ a {
 	width: var(--container-width);
 	margin: 0 auto;
 }
+
+
 
 .nav__menu {
 	display: flex;
@@ -156,14 +158,13 @@ a {
 	text-decoration: underline;
 }
 
-
 #hero {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background: url(/media/images/white-wave-mobile.svg)
-			center bottom -0.5px / 100% 24% no-repeat scroll padding-box border-box,
+	background: url(/media/images/white-wave-mobile.svg) center bottom -0.5px / 100%
+			24% no-repeat scroll padding-box border-box,
 		linear-gradient(60deg, rgb(82, 67, 170), rgb(237, 80, 180)) 0% 0% / auto
 			no-repeat scroll padding-box border-box rgb(82, 67, 170);
 	background-blend-mode: normal, normal;
@@ -247,7 +248,6 @@ a {
 	align-items: center;
 	border-radius: 4px;
 	padding: 12px 28px;
-	
 }
 
 .hero__video {
@@ -276,15 +276,106 @@ a {
 	width: 100%;
 }
 
+.productivity {
+	background: linear-gradient(0deg, rgb(230, 252, 255), rgb(255, 255, 255)) 0%
+		0% / auto repeat scroll padding-box border-box rgb(178, 212, 255);
+	background-blend-mode: normal;
+	padding-bottom: 100px;
+}
+
+.productivity__content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
+	gap: 20px;
+}
+
+.productivy__texts {
+	display: flex;
+	flex-direction: column;
+}
+
 .headings {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: flex-start;
-	gap:16px;
+	gap: 12px;
+	margin-bottom: 12px;
 }
 
 .headings small {
 	text-transform: uppercase;
 	font-weight: 600;
 }
+
+.headings h2 {
+	font-size: var(--text-subtitle-size);
+}
+
+.paragraphs {
+	font-size: var(--text-pbig-size);
+	line-height: 28px;
+}
+
+.productivity__graphics {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+}
+
+.images__carousel {
+	width: 100%;
+}
+
+.images__carousel img {
+	width: 100%;
+}
+
+.graphics__cards {
+	display: flex;
+	flex-direction: column;
+	
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: flex-end;
+	background-color: var(--card-color);
+	border-radius: 5px;
+}
+
+.card__texts {
+	width: 98%;
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+	background-color: #fff;
+	padding: 12px;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+
+.card__texts h4 {
+	font-size: 15px;
+	font-weight: 600;
+}
+
+.card__texts p {
+	line-height: 24px;
+}
+
+.not-in-mobile {
+	display: none;
+}
+
+.not-selected {
+	background-color: transparent;
+}
+
