--- a/styles/global.css
+++ b/styles/global.css
@@ -349,6 +349,7 @@ a {
 	align-items: flex-end;
 	background-color: var(--card-color);
 	border-radius: 5px;
+	border: 0px;
 }
 
 .card__texts {
@@ -374,6 +375,7 @@ a {
 .not-in-mobile {
 	display: none;
 }
+
 
 .not-selected {
 	background-color: transparent;
