--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -66,6 +66,7 @@
 	.hero__content {
 		flex-direction: row;
 		gap: 20px;
+		padding-top: 100px;
 	}
 
 	.hero__info {
@@ -74,6 +75,7 @@
 
 	.hero__texts {
 		text-align: left;
+		padding-top: 0;
 	}
 
 	.hero__texts h1 {
@@ -102,6 +104,10 @@
 
 	.hero__img {
 		align-self: flex-end;
+	}
+
+	.productivity__content {
+		gap: 60px;
 	}
 
 	.productivity__graphics {
