--- a/styles/global.css
+++ b/styles/global.css
@@ -47,9 +47,11 @@ a {
 	--container-width: 90%;
 	--text-title-size: 29px;
 	--text-title-line-height: 42px;
-	--text-subtitle-size: 19px;
+	--text-subtitle-size: 21px;
 	--text-pbig-size: 20px;
 	--text-button-size: 16px;
+	--text-antetitle: 15px;
+	/* --nav-bar-height: 100px; */
 }
 
 .container {
@@ -86,8 +88,15 @@ a {
 	align-items: center;
 }
 
+/* .empty-block {
+	height: var(--nav-bar-height);
+	background-color: #fff;
+} */
+
 .desktop-nav {
 	display: none;
+	height: var(--nav-bar-height);
+	background-color: #fff;
 }
 
 .menu__items ul {
@@ -304,6 +313,7 @@ a {
 }
 
 .headings small {
+	font-size: var(--text-antetitle);
 	text-transform: uppercase;
 	font-weight: 600;
 }
@@ -411,20 +421,33 @@ a {
 }
 
 .workflow__cards {
-	height: 260px;
+	max-width: 100%;
 	display: flex;
 	gap: 30px;
+	padding: 20px;
+	overflow-x: scroll;
 }
 
 .workflow__card__box {
-	height: 100%;
-	width: 320px;
+	min-width: 320px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
 	padding-top: 20px;
 	border-radius: 8px;
-	box-shadow: 0px 9px 5px -2px rgba(0,0,0,0.09);
+	box-shadow: 0px 9px 5px -2px rgba(0, 0, 0, 0.09);
+}
+
+.workflow__cards::-webkit-scrollbar {
+	width: 50px;
+}
+.workflow__cards::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px grey;
+	border-radius: 10px;
+}
+.workflow__cards::-webkit-scrollbar-thumb {
+	background: rgb(113, 113, 113);
+	border-radius: 10px;
 }
 
 .workflow__icon {
@@ -467,7 +490,7 @@ a {
 
 .workflow__card__texts p {
 	line-height: 24px;
-    font-weight: 400;
+	font-weight: 400;
 }
 
 .workflow__info {
@@ -481,10 +504,120 @@ a {
 .action__button {
 	width: fit-content;
 	display: flex;
+	background-color: #fff;
+	color: #000;
 	padding: 12px;
 	border: 1px solid var(--primary-color);
 	border-radius: 4px;
 }
 
 .action__button p {
-font-size: var(--text-button-size)}
+	font-size: var(--text-button-size);
+}
+
+.preview {
+	background: linear-gradient(240deg, rgb(0, 184, 217), rgb(0, 101, 255)) 0% 0% /
+		auto repeat scroll padding-box border-box rgb(0, 101, 255);
+	padding-bottom: 40px;
+}
+
+.preview__content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 40px 0;
+	gap: 40px;
+	
+}
+
+.preview__heading {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: var(--text-secondary-color);
+	gap: 20px;
+}
+
+.preview__heading__texts {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	gap: 12px;
+}
+
+.preview__heading__texts h2 {
+	font-size: var(--text-subtitle-size);
+}
+
+.preview__heading__texts p {
+	font-size: var(--text-pbig-size);
+	line-height: 30px;
+}
+
+.preview__images {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 28px;
+}
+
+.preview__card {
+	width: 100%;
+	background-color: #fff;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border-radius: 8px;
+	padding: 24px;
+	gap: 28px;
+	box-shadow: rgba(9, 30, 66, 0.15) 0px 0.5rem 1rem 0px;
+}
+
+.preview__image {
+	width: 100%;
+}
+
+.preview__image img {
+	width: 100%;
+}
+
+.preview__texts {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 16px;
+}
+
+.preview__texts__title {
+	display: flex;
+	align-items: center;
+	gap: 16px;
+}
+
+.preview__texts__title small {
+	font-size: var(--text-antetitle);
+	text-transform: uppercase;
+	font-weight: 600;
+}
+
+.preview__texts__content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 16px;
+}
+
+.preview__texts__content p {
+	font-size: var(--text-pbig-size);
+	line-height: 30px;
+}
+
+.preview__texts__content a {
+	font-size: var(--text-pbig-size);
+	line-height: 30px;
+}
