--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -4,6 +4,7 @@
 		--text-title-size: 44px;
 		--text-title-line-height: 52px;
 		--text-subtitle-size: 36px;
+		--text-survey: 34px;
 	}
 
 	.form__inputs {
@@ -66,6 +67,40 @@
 		max-width: 280px;
 		gap: 40px;
 	}
+
+	.quotes__texts {
+		justify-content: space-between;
+		padding: 32px 28px;
+		flex: 2;
+	}
+
+	.quotes__texts__opinion {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		flex: 1;
+	}
+
+	.quotes__author {
+		gap: 32px;
+	}
+
+.quotes__info {
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: flex-end;
+
+	}
+
+	.quotes__survey {
+		gap: 52px;
+		flex: 1;
+	}
+
+	.quotes__survey p {
+		line-height: 52px;
+	}
+
 }
 
 /* Media query para dispositivos de escritorio (mayores a 1024px y hasta 1439px) */
@@ -210,6 +245,24 @@
 	.customization__heading {
 		width: 60%;
 	}
+
+	.quotes__content {
+		flex-direction: row;
+	}
+
+	.quotes__texts {
+		border-top-left-radius: 8px;
+		border-bottom-left-radius: 8px;
+		border-top-right-radius: 0px;
+		border-bottom-right-radius: 0px;
+	}
+
+	.quotes__survey {
+		border-top-left-radius: 0px;
+		border-bottom-left-radius: 0px;
+		border-top-right-radius: 8px;
+		border-bottom-right-radius: 8px;
+	}
 }
 /* Media query para dispositivos de escritorio XXL (mayores a 1440px) */
 @media (min-width: 1440px) {
@@ -232,7 +285,8 @@
 	}
 
 	.customization__card {
-		width: auto;
-		flex: 1;
+		min-width: 300px;
 	}
+
+
 }
