--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -123,7 +123,6 @@
 	.companies__logos img {
 		width: 100%;
 	}
-
 }
 
 /* Media query para dispositivos de escritorio (mayores a 1024px y hasta 1439px) */
@@ -323,7 +322,18 @@
 		width: 80%;
 	}
 
+	#engage {
+		background: url(/media/images/swing-graphics-left.svg) left center / contain
+				no-repeat scroll padding-box border-box,
+			url(/media/images/swing-graphics-right.svg) right center / contain
+				no-repeat scroll padding-box border-box, linear-gradient(60deg, rgb(82, 67, 170), rgb(237, 80, 180)) 0% 0% /
+				auto repeat scroll padding-box border-box rgb(82, 67, 170);;
+	}
 
+	.engage__content .form__inputs {
+		flex-direction: row;
+		align-items: center;
+	}
 }
 /* Media query para dispositivos de escritorio XXL (mayores a 1440px) */
 @media (min-width: 1440px) {
@@ -347,6 +357,4 @@
 	.customization__card {
 		min-width: 300px;
 	}
-
-	
 }
