--- a/styles/global.css
+++ b/styles/global.css
@@ -887,6 +887,22 @@ footer {
 }
 
 
+
+
+.rrss__icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 30px;
+	border: 3px solid #fff;
+	border-radius: 50px;
+	padding: 4px;
+}
+
+.rrss__icon img {
+	width: 100%;
+}
+
 /* ---Modificadores de estilo--- */
 
 .blue-button {
