--- a/styles/global.css
+++ b/styles/global.css
@@ -888,13 +888,113 @@ footer {
 
 
 
+.about-us__content {
+	display: flex;
+	flex-direction: column;
+}
+
+.footer__login {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-bottom: 1px solid #ffffff39;
+	padding: 32px 12px 28px 0;
+}
+
+.about-us__items {
+	display: flex;
+	flex-direction: column;
+}
+
+.about-us__item {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	padding: 18px 0 12px 0;
+	gap: 12px;
+	border-bottom: 1px solid #ffffff39;
+}
+
+.about-us__item h4 {
+	font-size: var(--text-antetitle);
+	font-weight: 600;
+}
+
+.about-us__item p {
+	width: 70%;
+	font-size: 12px;
+	line-height: 18px;
+}
+
+.legal__content {
+	display: flex;
+	flex-direction: column;
+}
+
+.language {
+	display: flex;
+	align-items: center;
+	padding: 20px 0;
+	gap: 12px;
+}
+
+.language__icon {
+	width: 20px;
+}
+
+.language__icon img {
+	width: 100%;
+}
+
+.language__selector {
+	display: flex;
+	gap: 80px;
+}
+
+.language__selector__arrow {
+	width: 12px;
+}
+
+.language__selector__arrow img {
+	width:100%;
+}
+
+.legal__items {
+	display: flex;
+	flex-direction: column;
+	padding-bottom: 100px;
+}
+
+.legal__items ul {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
+.legal__items ul li {
+	font-size: 13px;
+}
+
+.legal__items ul li a {
+	color: #fff;
+	text-decoration: none;
+}
+
+.rrss {
+	padding-bottom: 80px;
+}
+
+.rrss ul {
+	display: flex;
+	gap: 30px;
+}
 
 .rrss__icon {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 30px;
-	border: 3px solid #fff;
+	width: 26px;
+	border: 2px solid #fff;
 	border-radius: 50px;
 	padding: 4px;
 }
